--- a/Fntt/Fntt/MainPage.xaml
+++ b/Fntt/Fntt/MainPage.xaml
@@ -6,9 +6,10 @@
     <StackLayout 
         HorizontalOptions="CenterAndExpand"
         VerticalOptions="CenterAndExpand"    >
-        <Entry x:Name="t" Text="1" ></Entry>
+        
         <Label x:Name="SenterText" Text="(0> __ (0>"></Label>
         <Button Clicked="Button_Clicked" ></Button>
+        <Label  x:Name="t" Text="f"></Label>
     </StackLayout>
     
     
