--- a/Fntt/Fntt.UWP/App.xaml
+++ b/Fntt/Fntt.UWP/App.xaml
@@ -1,4 +1,4 @@
-<Application
+﻿<Application
     x:Class="Fntt.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
