--- a/Fntt/Fntt.UWP/MainPage.xaml
+++ b/Fntt/Fntt.UWP/MainPage.xaml
@@ -1,4 +1,4 @@
-<forms:WindowsPage
+﻿<forms:WindowsPage
     x:Class="Fntt.UWP.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:forms="using:Xamarin.Forms.Platform.UWP"
