--- a/Fntt/Fntt/MainPage.xaml
+++ b/Fntt/Fntt/MainPage.xaml
@@ -8,7 +8,7 @@
         VerticalOptions="CenterAndExpand"    >
         
         <Label x:Name="SenterText" Text="(0> __ (0>"></Label>
-        <Button Clicked="Button_Clicked" ></Button>
+        <Button ></Button>
         <Label  x:Name="t" Text="f"></Label>
     </StackLayout>
     
