Added reset of data and schedule settings for the entire week

--- a/Fntt/Fntt/Visual/TodayTametable.xaml
+++ b/Fntt/Fntt/Visual/TodayTametable.xaml
@@ -16,7 +16,8 @@
                     Clicked="ShouAll"/>
 
 
-        <ToolbarItem Text="+"
+        <ToolbarItem Text="↺"
+                     Clicked="ResetData"
                     />
     </ContentPage.ToolbarItems>
 
