The algorithm has been changed for the new table.

--- a/Fntt/Fntt/Visual/LessonInfo.xaml
+++ b/Fntt/Fntt/Visual/LessonInfo.xaml
@@ -25,6 +25,10 @@
                 Text=""
                 VerticalOptions="Center" 
                 HorizontalOptions="CenterAndExpand" />
+            <Label x:Name="DateString"
+                Text=""
+                VerticalOptions="Center" 
+                HorizontalOptions="CenterAndExpand" />
 
 
 
