--- a/Fntt/Fntt/Visual/LessonInfo.xaml
+++ b/Fntt/Fntt/Visual/LessonInfo.xaml
@@ -2,8 +2,17 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Fntt.Visual.LessonInfo">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Label" >
+                <Setter Property="TextColor" Value="LightGray"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    
+    
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout BackgroundColor="#1E1E1E">
             <Label x:Name="LessonName"
                 Text=""
                 VerticalOptions="Center" 
