--- a/Fntt/Fntt/Visual/BufferPages/Minus1.xaml
+++ b/Fntt/Fntt/Visual/BufferPages/Minus1.xaml
@@ -3,11 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Fntt.Visual.BufferPages.Minus1"
              IsVisible ="false">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="asfa"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+    <StackLayout BackgroundColor="#1E1E1E">
+
+    </StackLayout>
 </ContentPage>
