--- a/Fntt/Fntt/Visual/LoadPage.xaml
+++ b/Fntt/Fntt/Visual/LoadPage.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Fntt.Visual.LoadPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label x:Name="LoadLable" Text="Загрузка "
+        <StackLayout BackgroundColor="#1E1E1E">
+            <Label x:Name="LoadLable" Text="Загрузка " TextColor="LightGray"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
