--- a/Fntt/Fntt/Visual/TodayTametable.xaml
+++ b/Fntt/Fntt/Visual/TodayTametable.xaml
@@ -27,6 +27,7 @@
                         TextColor="LightGray"
                      />
             <Button Text="↺"
+                        FontSize="Large"
                         Clicked="ResetData"
                         BackgroundColor="Transparent"
                         TextColor="LightGray"
